feat(backend): add `LoginUser`
